--- a/Dockerfile.gdsparser
+++ b/Dockerfile.gdsparser
@@ -6,4 +6,4 @@ WORKDIR '/var/lib/gdsparser'
 
 RUN cd /var/lib/gdsparser/GdsParser/ && dotnet publish -c Release -o out
 
-#ENTRYPOINT [ "dotnet" , "/var/lib/gdsparser/out/GdsParser.dll" ]
+ENTRYPOINT [ "dotnet" , "/var/lib/gdsparser/out/GdsParser.dll" ]
