--- a/CompositionRootLayer/CompositionRootLayer.csproj
+++ b/CompositionRootLayer/CompositionRootLayer.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CompositionRootLayer\CompositionRootLayer.csproj" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.4" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\InfrastuctureLayer\InfrastuctureLayer.csproj" />
     </ItemGroup>
 
